--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.17.2",
     "chai-http": "^4.0.0",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "joi": "^13.1.2",
